# deepresearch

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.kiro/specs/deepresearch-multiagent/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
benchmarks/researchbench/: README.md  questions.jsonl
docs/: ablation.md  architecture.md  blog.md  deepdive.md  multi-critic.md  report.html  setup.md
docs/spec/: design.md
experiments/: rerun_red_blue.py  run_ablation.py
experiments/results/20260527-193740-mimo-baseline-r0/: per_question.csv  summary.json  summary.md
experiments/results/20260527-194312-mimo-baseline-r0/: per_question.csv  summary.json  summary.md
experiments/results/20260527-194543-mimo-pipeline-r0/: per_question.csv  summary.json  summary.md
experiments/results/20260527-200132-ablation/: ablation-summary.md  compare-pipeline-r0-vs-baseline.md  compare-pipeline-r2-vs-baseline.md  compare-pipeline-r2-vs-pipeline-r0.md
experiments/results/20260527-201330-ablation/: ablation-summary.md  compare-pipeline-r0-vs-baseline.md  compare-pipeline-r2-vs-baseline.md  compare-pipeline-r2-vs-pipeline-r0.md
scripts/: check_report_html.py  probe_embeddings.py  probe_judge_chat.py  probe_judge_embeddings.py
src/dr_agent/: __init__.py  cli.py  config.py
tests/: conftest.py  test_bench.py  test_compare.py  test_compress.py  test_critics.py  test_deepdive.py  test_envelope.py  test_pool.py  test_red_blue.py  test_search_cache.py  test_state_machine.py  test_stats.py  test_token_bucket.py
ui/: app.py
(+76 files in other folders)
