[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dr-agent"
version = "0.1.0"
description = "DeepResearch-MultiAgent: multi-agent collaborative deep research report system"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "you" }]
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "loguru>=0.7",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "tenacity>=8.2",
    "networkx>=3.2",
    "tiktoken>=0.7",
    "trafilatura>=1.9",
    "pymupdf>=1.24",
    "tavily-python>=0.3",
    "scikit-learn>=1.4",
    "jieba>=0.42",
    "sumy>=0.11",
    "rich>=13.7",
]

[project.optional-dependencies]
ui = ["streamlit>=1.34"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
dr-agent = "dr_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/dr_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
